fixed button mobile bug

--- a/Projects/age-calculator-app-main/styles/style.css
+++ b/Projects/age-calculator-app-main/styles/style.css
@@ -43,6 +43,7 @@ body {
     align-items: center;
     font-family: 'Poppins';
     font-weight: bold;
+    position: relative;
 }
 
 .container {
@@ -155,6 +156,25 @@ body {
     color: var(--purple);
 }
 
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 2rem;
+}
+
+.attribution a {
+    color: var(--purple);
+    transition: all 0.35s;
+}
+
+.attribution a:hover {
+    color: var(--smokey-grey);
+}
+
 @media (max-width: 400px) {
     body {
         padding-top: 5.5rem;
@@ -192,9 +212,12 @@ body {
         padding: 1.25rem;
     }
 
+    .btn:active {
+        transform: translate(-50%, 50%) scale(0.8);
+    }
+
     .btn img {
         width: 25px;
-        /* aspect-ratio: 3 / 2; */
     }
 
     .container__output {
